fix: overflow issue in long manga bookmark names

--- a/src/renderer/styles/mini/_listCont.scss
+++ b/src/renderer/styles/mini/_listCont.scss
@@ -89,7 +89,8 @@
                         }
                     }
 
-                    .text {
+                    .text,
+                    .text span {
                         overflow: hidden;
                         text-overflow: ellipsis;
                         display: -webkit-box;
@@ -98,14 +99,11 @@
                         -webkit-line-clamp: 1;
                         /* number of lines to show */
                         -webkit-box-orient: vertical;
-
-                        &:has(.page) {
-                            width: 100%;
-                            display: flex;
-                            flex-direction: row;
-                            justify-content: space-between;
-                            align-items: center;
-                        }
+                    }
+                    .text:has(.page) {
+                        display: grid;
+                        gap: 5px;
+                        grid-template-columns: 1fr auto;
                     }
 
                     &::before {
